# classic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.beads/: .beads-credential-key  issues.jsonl  metadata.json
crates/classic-ad/: Cargo.toml
crates/classic-ad/src/: config.rs  discovery_loop.rs  frames.rs  gossip.rs  lib.rs  schema.rs  start.rs  store.rs
crates/classic-ad/src/discovery/: cpu.rs  gpu.rs  load.rs  mem.rs  mod.rs  numa.rs  pci.rs
crates/classic-ad/tests/: schema_roundtrip.rs
crates/classic-cap/: Cargo.toml
crates/classic-cap/src/: broker.rs  cgroup.rs  devctrl.rs  lib.rs  nvidia.rs  pci.rs
crates/classic-cli/: Cargo.toml
crates/classic-cli/src/: group_toml.rs  lib.rs  main.rs  submit.rs
crates/classic-cli/tests/: submit_toml.rs
crates/classic-fs/: Cargo.toml
crates/classic-fs/src/: client.rs  errno.rs  lib.rs  namespace.rs  synthetic.rs
crates/classic-fs/src/proto/: codec.rs  mod.rs  types.rs
crates/classic-fs/src/server/: mod.rs  tree.rs
crates/classic-fs/tests/: native_client_e2e.rs
crates/classic-mbox/: Cargo.toml
crates/classic-mbox/src/: directory.rs  error.rs  frames.rs  gc.rs  gossip.rs  gossip_emit.rs  handler.rs  lib.rs  mbox.rs  send.rs
crates/classic-mbox/tests/: local_roundtrip.rs  three_node_crdt.rs  two_node_mail.rs
crates/classic-mbox/tests/common/: mod.rs
crates/classic-node/: Cargo.toml
crates/classic-node/src/: config.rs  control.rs  lib.rs  link.rs  main.rs  mesh.rs  node_id.rs  peers.rs  proto_handler.rs  shutdown.rs  spawn_socket.rs
crates/classic-node/tests/: gossip_two_node.rs  reconnect.rs  spawn_bridge_e2e.rs  three_node.rs  two_node.rs
crates/classic-place/: Cargo.toml
crates/classic-place/src/: ast.rs  error.rs  eval.rs  frame.rs  free_pool.rs  group.rs  lex.rs  lib.rs  model.rs  parse.rs  typeck.rs
crates/classic-place/tests/: eval.rs  golden_errors.rs  grammar.rs  group_validation.rs  pack.rs  spread.rs
crates/classic-place/tests/common/: mod.rs
crates/classic-proto/: Cargo.toml
crates/classic-proto/src/: conn.rs  frame.rs  ids.rs  lib.rs  mux.rs  proto.rs  spawn.rs  version.rs
crates/classic-spawn/: Cargo.toml
crates/classic-spawn/src/: coord.rs  deny.rs  error.rs  exec.rs  executor.rs  group_proto.rs  lib.rs  mbox_alloc.rs  originator.rs  reservation.rs
crates/classic-spawn/tests/: coord.rs  it_groups.rs
examples/multinode/: README.md
examples/multinode/config/: node-a.toml  node-b.toml  node-c.toml
examples/multinode/lib/: assert.sh
plans/: 01-skeleton-transport.md  02-node-ad-hw-discovery.md  03-placement-predicates.md  04-spawn-pipeline.md  05-mailbox-service-directory.md  06-9p-namespace-server.md  07-placement-groups.md  08-multinode-demo.md  09-qemu-e2e.md  ARCHITECTURE.md  TEMPLATE.md  dsl-reference.md
plans/future/: F1-runtime-migration.md  F2-transparent-network-fs.md  F3-kernel-modules.md  F4-node-security.md  F5-multitenancy-quotas.md  README.md
