[workspace]
resolver = "2"
members = [
    "crates/classic-proto",
    "crates/classic-ad",
    "crates/classic-place",
    "crates/classic-mbox",
    "crates/classic-fs",
    "crates/classic-cap",
    "crates/classic-spawn",
    "crates/classic-node",
    "crates/classic-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
bincode = "2.0"
bytes = "1.7"
serde = "1.0"
thiserror = "2.0"
tokio = "1.40"
