[package]
name = "classic-ad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
classic-proto = { path = "../classic-proto" }
bincode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
nvml-wrapper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util", "time"] }
