[package]
name = "classic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "classic"
path = "src/main.rs"

[dependencies]
classic-ad = { path = "../classic-ad" }
classic-node = { path = "../classic-node" }
classic-proto = { path = "../classic-proto" }
classic-spawn = { path = "../classic-spawn" }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "io-util"] }
