[package]
name = "classic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "classic_cli"
path = "src/lib.rs"

[[bin]]
name = "classic"
path = "src/main.rs"

[dependencies]
classic-ad = { path = "../classic-ad" }
classic-node = { path = "../classic-node" }
classic-place = { path = "../classic-place" }
classic-proto = { path = "../classic-proto" }
classic-spawn = { path = "../classic-spawn" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "io-util"] }
toml = { workspace = true }
