[package]
name = "classic-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
classic-ad = { path = "../classic-ad" }
classic-cap = { path = "../classic-cap" }
classic-mbox = { path = "../classic-mbox" }
classic-proto = { path = "../classic-proto" }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util", "time"] }
