[package]
name = "classic-mbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
classic-proto = { path = "../classic-proto" }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util", "time"] }
