[package]
name = "classic-place"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
classic-ad = { path = "../classic-ad" }
classic-proto = { path = "../classic-proto" }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
