[package]
name = "classic-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }
