[package]
name = "classic-spawn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
classic-cap = { path = "../classic-cap" }
classic-mbox = { path = "../classic-mbox" }
classic-place = { path = "../classic-place" }
classic-proto = { path = "../classic-proto" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
