[package]
name = "classic-spawn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
classic-cap = { path = "../classic-cap" }
classic-mbox = { path = "../classic-mbox" }
classic-place = { path = "../classic-place" }
classic-proto = { path = "../classic-proto" }
async-trait = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "test-util", "time"] }
